--- a/render.yaml
+++ b/render.yaml
@@ -2,9 +2,10 @@ services:
   - type: web
     name: laravel-app
     env: php
-    region: frankfurt
-    buildCommand: "composer install"
-    startCommand: "php artisan serve --host 0.0.0.0 --port 10000"
     plan: free
-    branch: master
-    autoDeploy: true
+    region: frankfurt
+    buildCommand: |
+      composer install --no-dev --optimize-autoloader
+      php artisan config:cache
+      php artisan migrate --force
+    startCommand: php artisan serve --host 0.0.0.0 --port 10000
