--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,7 @@
 services:
   - type: web
     name: laravel-app
-    env: php
+    runtime: php
     plan: free
     region: frankfurt
     buildCommand: |
