--- a/render.yaml
+++ b/render.yaml
@@ -1,11 +1,26 @@
 services:
   - type: web
     name: laravel-app
-    runtime: php
     plan: free
     region: frankfurt
-    buildCommand: |
-      composer install --no-dev --optimize-autoloader
-      php artisan config:cache
-      php artisan migrate --force
-    startCommand: php artisan serve --host 0.0.0.0 --port 10000
+    branch: master
+    dockerfilePath: ./Dockerfile
+    envVars:
+      - key: APP_ENV
+        value: production
+      - key: APP_DEBUG
+        value: false
+      - key: DB_CONNECTION
+        value: pgsql
+      - key: DB_HOST
+        value: dpg-d0vbpiu3jp1c73e0kfp0-a
+      - key: DB_PORT
+        value: 5432
+      - key: DB_DATABASE
+        value: b1
+      - key: DB_USERNAME
+        value: postgres1
+      - key: DB_PASSWORD
+        value: O4rKMTmZPmPXK80mBvv0OkSTPOCRkasf
+      - key: APP_KEY
+        value: base64:AqcsAKR+oLMBMwFMxONS0S/OLad2pkxln2ue5iPfoiY=
